<resources>
    <string name="app_name">Calculator</string>
    <string name="Divide">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="enter_second_value">Enter Second Value</string>
    <string name="enter_first_value">Enter First Value</string>
    <string name="title_activity_splash">Calculator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


</resources>